--- a/UniversityMVC/Views/University/Index.cshtml
+++ b/UniversityMVC/Views/University/Index.cshtml
@@ -7,12 +7,12 @@
             <h2 class="text-primary">University List</h2>
         </div>
         <div class="col-6 text-right">
-            <a class="btn btn-primary text-white"><i class="fas fa-plus"></i> &nbsp; Create New University</a>
+            <a class="btn btn-primary text-white" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New University</a>
         </div>
     </div>
     <br />
     <br />
-    <div style="background-color:#cde8e2" class="p-3 rounded">
+    <div style="background-color:#ffffff" class="p-3 rounded">
         <table id="tblData" class="table table-striped table-bordered" style="width:100%">
             <thead>
                 <tr class="table-danger">
