Refactor the url parameter

--- a/UniversityMVC/Views/Shared/_Header.cshtml
+++ b/UniversityMVC/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">UniversityMVC</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVC</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="University" asp-action="Index">University</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="University" asp-action="Index">University</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="PathWay" asp-action="Index">PathWay</a>
                     </li>
                 </ul>
             </div>
