Upsert View and Delete PathWay MVC

--- a/UniversityMVC/Views/PathWay/Index.cshtml
+++ b/UniversityMVC/Views/PathWay/Index.cshtml
@@ -20,7 +20,7 @@
             <thead>
                 <tr class="table-danger">
                     <th>University</th>
-                    <th>PathWay Name</th>
+                    <th>PathWay</th>
                     <th>Distance</th>
                     <th></th>
                 </tr>
