--- a/UniversityMVC/Views/_ViewImports.cshtml
+++ b/UniversityMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using UniversityMVC
 @using UniversityMVC.Models
+@using UniversityMVC.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
