--- a/UniversityMVC/Views/Home/Index.cshtml
+++ b/UniversityMVC/Views/Home/Index.cshtml
@@ -1,8 +1,87 @@
-﻿@{
+﻿@model HomeVM
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container">
+    <div class="row pb-4 backgroundWhite">
+
+        @foreach (University uni in Model.UniversityList)
+        {
+
+            <div class="container backgroundWhite pb-4">
+                <div class="card border">
+                    <div class="card-header bg-dark text-light ml-0 row container">
+                        <div class="col-12 col-md-6">
+                            <h1 class="text-warning">@uni.Name</h1>
+                        </div>
+                        <div class="col-12 col-md-6 text-md-right">
+                            <h1 class="text-warning">Address : @uni.Address</h1>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="container rounded p-2">
+                            <div class="row">
+                                <div class="col-12 col-lg-8">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <h3 style="color:#bbb9b9">Established: @uni.Established.ToShortDateString()</h3>
+                                        </div>
+                                        <div class="col-12">
+
+                                            @{
+                                                IEnumerable<PathWay> PathWayList = Model.PathWayList.Where(c => c.UniversityId == uni.Id);
+                                                @if (PathWayList.Count() > 0)
+                                                {
+                                                    <table class="table table-striped" style="border:1px solid #808080 ">
+                                                        <tr class="table-secondary">
+                                                            <th>Pathway</th>
+                                                            <th>Distance</th>
+                                                            <th>Difficult</th>
+                                                        </tr>
+                                                        @foreach (PathWay pw in PathWayList)
+                                                        {
+                                                            <tr>
+                                                                <td>@pw.Name</td>
+                                                                <td>@pw.Distance km</td>
+                                                                <td>@pw.Difficulty</td>
+                                                            </tr>
+                                                        }
+                                                    </table>
+                                                }
+                                                else
+                                                {
+                                                    <br />
+                                                    <p>No PathWay Available For This University...</p>
+                                                }
+                                            }
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-lg-4 text-center">
+                                    @if (uni.Picture != null)
+                                    {
+                                        var base64 = Convert.ToBase64String(uni.Picture);
+                                        string imgsrc = "";
+                                        if (string.IsNullOrEmpty(base64))
+                                        {
+                                            imgsrc = "https://via.placeholder.com/150";
+                                        }
+                                        else
+                                        {
+                                            imgsrc = $"data:image/jpg;base64,{base64}";
+                                        }
+                                        <img src="@imgsrc" class="card-img-top p-2 rounded" width="100%" />
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
 </div>
