Fix font in Home Page

--- a/UniversityMVC/Views/Home/Index.cshtml
+++ b/UniversityMVC/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
                 <div class="card border">
                     <div class="card-header bg-dark text-light ml-0 row container">
                         <div class="col-12 col-md-6">
-                            <h1 class="text-warning">@uni.Name</h1>
+                            <h2 class="text-warning">@uni.Name</h2>
                         </div>
                         <div class="col-12 col-md-6 text-md-right">
-                            <h1 class="text-warning">Address : @uni.Address</h1>
+                            <h2 class="text-warning">Address : @uni.Address</h2>
                         </div>
                     </div>
                     <div class="card-body">
@@ -38,7 +38,7 @@
                                                         <tr class="table-secondary">
                                                             <th>Pathway</th>
                                                             <th>Distance</th>
-                                                            <th>Difficult</th>
+                                                            <th>Difficulty</th>
                                                         </tr>
                                                         @foreach (PathWay pw in PathWayList)
                                                         {
@@ -53,7 +53,7 @@
                                                 else
                                                 {
                                                     <br />
-                                                    <p>No PathWay Available For This University...</p>
+                                                    <p class="text-info">No PathWay Available For This University...</p>
                                                 }
                                             }
 
