LoginRegisterView and Header Authorize

--- a/UniversityMVC/Views/Home/Index.cshtml
+++ b/UniversityMVC/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="card border">
                     <div class="card-header bg-dark text-light ml-0 row container">
                         <div class="col-12 col-md-6">
-                            <h2 class="text-warning">@uni.Name</h2>
+                            <h2 class="text-warning">@uni.Name - @uni.Abbreviation</h2>
                         </div>
                         <div class="col-12 col-md-6 text-md-right">
                             <h2 class="text-warning">Address : @uni.Address</h2>
