--- a/UniversityMVC/Views/Shared/_Header.cshtml
+++ b/UniversityMVC/Views/Shared/_Header.cshtml
@@ -1,4 +1,6 @@
-﻿<header>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor httpAcc
+<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
@@ -13,12 +15,27 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="University" asp-action="Index">University</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="PathWay" asp-action="Index">PathWay</a>
-                    </li>
+                    @if (!string.IsNullOrWhiteSpace(httpAcc.HttpContext.Session.GetString("JWToken")))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="University" asp-action="Index">University</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="PathWay" asp-action="Index">PathWay</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Register">Register</a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
