Hash MD5 for Password

--- a/UniversityMVC/Views/Home/Register.cshtml
+++ b/UniversityMVC/Views/Home/Register.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-<h1>Login</h1>
+<h1>Register</h1>
 <form method="post">
     <input asp-for="UserName" type="text" placeholder="Type your username..." />
     <input asp-for="Password" type="text" placeholder="Type your password..." />
