--- a/UniversityMVC/Views/Shared/_Header.cshtml
+++ b/UniversityMVC/Views/Shared/_Header.cshtml
@@ -1,5 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor httpAcc
+@{
+    string CurrentToken = httpAcc.HttpContext.Session.GetString("JWToken");
+    string CurrentUserName = httpAcc.HttpContext.Session.GetString("CurrentUserName");
+}
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
@@ -11,17 +15,13 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    @if (!string.IsNullOrWhiteSpace(httpAcc.HttpContext.Session.GetString("JWToken")))
+
+                @*RIGHT SIDE HEADER*@
+                <ul class="navbar-nav">
+                    @if (!string.IsNullOrWhiteSpace(CurrentToken))
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="University" asp-action="Index">University</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="PathWay" asp-action="Index">PathWay</a>
+                            <a class="nav-link text-dark">Hello @CurrentUserName!</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
@@ -37,6 +37,23 @@
                         </li>
                     }
                 </ul>
+
+                @*LEFT SIDE HEADER*@
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    @if (!string.IsNullOrWhiteSpace(CurrentToken))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="University" asp-action="Index">University</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="PathWay" asp-action="Index">PathWay</a>
+                        </li>
+                    }
+                </ul>
+
             </div>
         </div>
     </nav>
