--- a/UniversityMVC/Views/Home/Register.cshtml
+++ b/UniversityMVC/Views/Home/Register.cshtml
@@ -3,8 +3,25 @@
     ViewData["Title"] = "Register";
 }
 <h1>Register</h1>
-<form method="post">
-    <input asp-for="UserName" type="text" placeholder="Type your username..." />
-    <input asp-for="Password" type="text" placeholder="Type your password..." />
-    <button type="submit" value="Submit">Register</button>
-</form>
+<div class="row">
+    <div class="col-md-4">
+        <form method="post">
+            <h4>Create a new account.</h4>
+            <hr />
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="UserName"></label>
+                <input asp-for="UserName" class="form-control" type="text" placeholder="Type your username..." />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" type="text" placeholder="Type your password..." />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+    </div>
+</div>
