--- a/UniversityMVC/Views/Shared/_Layout.cshtml
+++ b/UniversityMVC/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
 
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_Alert" />
+
             @RenderBody()
         </main>
     </div>
