--- a/UniversityMVC/Views/Home/Login.cshtml
+++ b/UniversityMVC/Views/Home/Login.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Password"></label>
-                    <input asp-for="Password" class="form-control" type="text" placeholder="Type your password..." />
+                    <input asp-for="Password" class="form-control" type="password" placeholder="Type your password..." />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-group">
