--- a/UniversityMVC/Views/Shared/_Header.cshtml
+++ b/UniversityMVC/Views/Shared/_Header.cshtml
@@ -21,7 +21,7 @@
                     @if (!string.IsNullOrWhiteSpace(CurrentToken))
                     {
                         <li class="nav-item">
-                            <a class="nav-link text-dark">Hello @CurrentUserName!</a>
+                            <a class="nav-link text-dark">Hello @User.Identity.Name</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Logout">Logout</a>
